# LekaOS

./: .clang-format  .clang-format-ignore  .clang-tidy  .codeclimate.yml  .cppcheck_suppressions  .editorconfig  .flake8  .gcc_arm_none_eabi_url  .gitattributes  .gitignore  .gitmojirc.json  .mbed  .mbed_version  .mbedignore  .mcuboot_version  .mdlrc  .mdlrc_style.rb  .pylintrc  .ycm_extra_conf.py  Bootloader.sh  CMakeLists.txt  LICENSE  Makefile  README.md  Untitled-1.sh  application.sh  bootloader.sh  build_bootloader.sh  build_firmware.sh  build_os.sh  build_update.sh  custom_targets.json  firmware.sh  generate_firmware.sh  mbed-cmake.cmake  mbed_app.json  pelion.cmake  requirements.txt  signing-keys.pem  sonar-project.properties
app/bootloader/: CMakeLists.txt  main.cpp  signing_keys.c
app/os/: CMakeLists.txt  LedsUtils.cpp  RobotController.cpp  RobotController.h  main.cpp
drivers/: CMakeLists.txt
drivers/Audio/: CMakeLists.txt
drivers/CoreAudio/: CMakeLists.txt
drivers/CoreBattery/: CMakeLists.txt
drivers/CoreBufferedSerial/: CMakeLists.txt
drivers/CoreCR95HF/: CMakeLists.txt
drivers/CoreDAC/: CMakeLists.txt
drivers/CoreDACExpander/: CMakeLists.txt
drivers/CoreDACTouch/: CMakeLists.txt
drivers/CoreEventFlags/: CMakeLists.txt
drivers/CoreEventQueue/: CMakeLists.txt
drivers/CoreFlashMemory/: CMakeLists.txt
drivers/CoreFs/: CMakeLists.txt
drivers/CoreHTS/: CMakeLists.txt
drivers/CoreI2C/: CMakeLists.txt
drivers/CoreIMU/: CMakeLists.txt
drivers/CoreIMUlsm6dsox/: CMakeLists.txt
drivers/CoreIOExpander/: CMakeLists.txt  CMakelists.txt
drivers/CoreInterruptIn/: CMakeLists.txt
drivers/CoreLED/: CMakeLists.txt
drivers/CoreLL/: CMakeLists.txt
drivers/CoreLSM6DSOX/: CMakeLists.txt
drivers/CoreLightSensor/: CMakeLists.txt
drivers/CoreMCU/: CMakeLists.txt
drivers/CoreMicrophone/: CMakeLists.txt
drivers/CoreMotor/: CMakeLists.txt
drivers/CoreMutex/: CMakeLists.txt
drivers/CorePwm/: CMakeLists.txt
drivers/CoreQDAC/: CMakeLists.txt
drivers/CoreQSPI/: CMakeLists.txt
drivers/CoreRFID/: CMakeLists.txt
drivers/CoreRFIDReader/: CMakeLists.txt
drivers/CoreSPI/: CMakeLists.txt
drivers/CoreSTM32Hal/: CMakeLists.txt
drivers/CoreTicker/: CMakeLists.txt
drivers/CoreTimeout/: CMakeLists.txt
drivers/CoreTouch/: CMakeLists.txt
drivers/CoreTouchSensor/: CMakeLists.txt
drivers/CoreVibration/: CMakeLists.txt
drivers/CoreVideo/: CMakeLists.txt
drivers/CoreWifi/: CMakeLists.txt
drivers/FastLED/: CMakeLists.txt
drivers/FileManager/: CMakeLists.txt
drivers/ID/: CMakeLists.txt
drivers/KitRFID/: CMakeLists.txt
drivers/LKCoreAV/: CMakeLists.txt
drivers/LKCoreBattery/: CMakeLists.txt
drivers/LKCoreFatFs/: CMakeLists.txt
drivers/LKCoreI2C/: CMakeLists.txt
drivers/LKCoreLL/: CMakeLists.txt
drivers/LKCoreLightSensor/: CMakeLists.txt
drivers/LKCoreMicrophone/: CMakeLists.txt
drivers/LKCoreMotor/: CMakeLists.txt
drivers/LKCoreRFID/: CMakeLists.txt
drivers/LKCoreSTM32Hal/: CMakeLists.txt
drivers/LKCoreTemperatureSensor/: CMakeLists.txt
drivers/LKCoreVideo/: CMakeLists.txt
drivers/Motor/: CMakeLists.txt
drivers/RFIDKit/: CMakeLists.txt
drivers/SD/: CMakeLists.txt
drivers/Screen/: CMakeLists.txt
drivers/include/: status.h
libs/: CMakeLists.txt  README.md
libs/ActivityKit/: CMakeLists.txt
libs/AudioKit/: CMakeLists.txt
libs/BLEKit/: CMakeLists.txt
libs/BatteryKit/: CMakeLists.txt
libs/BehaviorKit/: CMakeLists.txt
libs/BehaviorKitDeprecated/: CMakeLists.txt
libs/CircularBuffer/: CMakeLists.txt
libs/ColorKit/: CMakeLists.txt
libs/CommandKit/: CMakeLists.txt
libs/ConfigKit/: CMakeLists.txt
libs/ContainerKit/: CMakeLists.txt
libs/CriticalSection/: CMakeLists.txt
libs/EventLoopKit/: CMakeLists.txt
libs/FileManager/: CMakeLists.txt
libs/FileManagerKit/: CMakeLists.txt
libs/FileReception/: CMakeLists.txt
libs/FileSystemKit/: CMakeLists.txt
libs/FirmwareKit/: CMakeLists.txt
libs/GameKit/: CMakeLists.txt
libs/HelloWorld/: CMakeLists.txt
libs/IMUKit/: CMakeLists.txt
libs/IOKit/: CMakeLists.txt
libs/LKAnimationKit/: CMakeLists.txt
libs/LKCalculatorKit/: CMakeLists.txt
libs/LKUtils/: CMakeLists.txt
libs/LKVideoKit/: CMakeLists.txt
libs/Led/: CMakeLists.txt
libs/LedKit/: CMakeLists.txt
libs/LekaFirmware/: CMakeLists.txt
libs/LekaScreen/: CMakeLists.txt
libs/LogKit/: CMakeLists.txt
libs/MagicCardKit/: CMakeLists.txt
libs/MotionKit/: CMakeLists.txt
libs/Motor/: CMakeLists.txt
libs/Pelion/: CMakeLists.txt
libs/PrettyPrinter/: CMakeLists.txt
libs/RFIDKit/: CMakeLists.txt
libs/ReinforcerKit/: CMakeLists.txt
libs/RobotKit/: CMakeLists.txt  StateMachine.uml
libs/SensorGameTouchSpeed/: CMakeLists.txt
libs/SerialNumberKit/: CMakeLists.txt
libs/StateMachineKit/: CMakeLists.txt
libs/TouchSensorKit/: CMakeLists.txt
libs/UIAnimationKit/: CMakeLists.txt
libs/Utils/: CMakeLists.txt
libs/VideoKit/: CMakeLists.txt
libs/WebKit/: CMakeLists.txt
spikes/: CMakeLists.txt  README.md
spikes/lk_accel_gyro/: CMakeLists.txt  main.cpp
spikes/lk_activity_kit/: CMakeLists.txt  main.cpp
spikes/lk_application_demo/: CMakeLists.txt  main.cpp
spikes/lk_audio/: AudioKit.cpp  AudioKit.h  AudioUtils.h  CMakeLists.txt  WavFile.cpp  WavReader.cpp  main.cpp
spikes/lk_audio_video/: CMakeLists.txt  main.cpp
spikes/lk_auto_charge/: CMakeLists.txt  HappyFishy.cpp  HappyFishy.h  HappyToupie.cpp  HappyToupie.h  SealStrategy.cpp  SealStrategy.h  main.cpp
spikes/lk_behavior_kit/: CMakeLists.txt  main.cpp
spikes/lk_ble/: CMakeLists.txt  main.cpp
spikes/lk_bluetooth/: BM64Converter.cpp  BM64Converter.h  CMakeLists.txt  LekaBluetooth.cpp  LekaBluetooth.h  main.cpp
spikes/lk_boost_ut/: CMakeLists.txt  main.cpp  utils.h
spikes/lk_bootloader_ears/: CMakeLists.txt  main.cpp
spikes/lk_cg_animations/: CMakeLists.txt  main.cpp
spikes/lk_color_kit/: CMakeLists.txt  main.cpp
spikes/lk_command_kit/: CMakeLists.txt  main.cpp
spikes/lk_config_kit/: CMakeLists.txt  main.cpp
spikes/lk_core_io_expander/: CMakeLists.txt  (+1 more)
src/: CMakeLists.txt  main.cpp
(+2217 files in other folders)
