# Leka - LekaOS
# Copyright 2020 APF France handicap
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(${LIBS_DIR}/BatteryKit)
add_subdirectory(${LIBS_DIR}/BehaviorKit)
add_subdirectory(${LIBS_DIR}/BLEKit)
add_subdirectory(${LIBS_DIR}/ColorKit)
add_subdirectory(${LIBS_DIR}/CommandKit)
add_subdirectory(${LIBS_DIR}/ConfigKit)
add_subdirectory(${LIBS_DIR}/ContainerKit)
add_subdirectory(${LIBS_DIR}/EventLoopKit)
add_subdirectory(${LIBS_DIR}/FileManagerKit)
add_subdirectory(${LIBS_DIR}/FirmwareKit)
add_subdirectory(${LIBS_DIR}/IOKit)
add_subdirectory(${LIBS_DIR}/LedKit)
add_subdirectory(${LIBS_DIR}/RobotKit)
add_subdirectory(${LIBS_DIR}/RFIDKit)
add_subdirectory(${LIBS_DIR}/SerialNumberKit)
add_subdirectory(${LIBS_DIR}/UIAnimationKit)
add_subdirectory(${LIBS_DIR}/VideoKit)
add_subdirectory(${LIBS_DIR}/WebKit)

add_subdirectory(${LIBS_DIR}/PrettyPrinter)

add_subdirectory(${LIBS_DIR}/InvestigationDay/BLE)
add_subdirectory(${LIBS_DIR}/InvestigationDay/LekaBluetooth)
add_subdirectory(${LIBS_DIR}/InvestigationDay/LekaRFID)
add_subdirectory(${LIBS_DIR}/InvestigationDay/LekaScreen)
add_subdirectory(${LIBS_DIR}/InvestigationDay/LekaTouch)
add_subdirectory(${LIBS_DIR}/InvestigationDay/LekaWifi)
